# app/Http/Controllers/Api/v1/UserController.php
@@ -3,12 +3,47 @@
 namespace App\Http\Controllers\Api\v1;
 
 use App\Http\Controllers\Controller;
-use App\Models\User;
+use App\Repositories\Interfaces\UserRepository;
 
 class UserController extends Controller
 {
+    /**
+     * @var UserRepository
+     */
+    protected $repository;
+
+    public function __construct(UserRepository $repository){
+        $this->repository = $repository;
+    }
+
+
+    /**
+     * @OA\Get(
+     *     tags={"users"},
+     *     summary="get all user",
+     *     description="get all user on database and paginate then",
+     *     path="/users",
+     *     @OA\Response(
+     *      response="200", description="List of users"
+     *     ),
+     *     @OA\Response(
+     *         response="default",
+     *         description="unexpected error",
+     *         @OA\JsonContent(ref="#/components/schemas/ErrorModel"),
+     *         @OA\XmlContent(ref="#/components/schemas/ErrorModel"),
+     *         @OA\MediaType(
+     *             mediaType="text/xml",
+     *             @OA\Schema(ref="#/components/schemas/ErrorModel")
+     *         ),
+     *         @OA\MediaType(
+     *             mediaType="text/html",
+     *             @OA\Schema(ref="#/components/schemas/ErrorModel")
+     *         )
+     *     )
+     * )
+     */
     public function index()
     {
-        return User::all();
+        return $this->repository->paginate();
     }
 }
